limpieza de weekly schedule con cambio de semana

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,6 +51,7 @@
             <a href="admin.html" class="admin-only">Administrador de perfiles</a>
             <a href="abm-institutions.html" class="admin-only">ABM Instituciones</a>
             <a href="abm-work-sites.html" class="admin-only">ABM Bocas de Trabajo</a>
+            <a href="default-assignments.html" class="admin-only">Configurar Asignaciones por Defecto</a>
             <a href="login.html" id="logout">Cerrar sesión</a>
         </div>
     </header>
@@ -72,6 +73,7 @@
             <a href="print-view.html"><button>Informe de plantas</button></a>
             <a href="coverageInform.html"><button>Informe de coberturas</button></a>
             <a href="weekly-schedule.html"><button>Programación de plantas</button></a>
+            <!-- <a href="extra-assignments.html" class="admin-only"><button>Asignaciones Extras</button></a> -->
             <a href="workSchemes.html"><button>Distribución de colores</button></a>
             <a href="solicitudCobertura.html"><button>Solicitud de coberturas</button></a>
             <!-- <button onclick="openFile('https://docs.google.com/spreadsheets/d/1IIAo4YHyBavQmA7iN3xVwhW9NncDwYU-3PpnL81d4TE/edit?usp=sharing')">Vacaciones y Guardias 2024</button>
