--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -115,6 +115,7 @@
                 <select id="workSchedule-monday" name="workSchedule-monday">
                     <option value="Mañana">Mañana</option>
                     <option value="Tarde">Tarde</option>
+                    <option value="Mañana y Tarde">Mañana y Tarde</option>
                     <option value="Variable">Variable</option>
                     <option value="No trabaja">No trabaja</option>
                 </select>
@@ -124,6 +125,7 @@
                 <select id="workSchedule-tuesday" name="workSchedule-tuesday">
                     <option value="Mañana">Mañana</option>
                     <option value="Tarde">Tarde</option>
+                    <option value="Mañana y Tarde">Mañana y Tarde</option>
                     <option value="Variable">Variable</option>
                     <option value="No trabaja">No trabaja</option>
                 </select>
@@ -133,6 +135,7 @@
                 <select id="workSchedule-wednesday" name="workSchedule-wednesday">
                     <option value="Mañana">Mañana</option>
                     <option value="Tarde">Tarde</option>
+                    <option value="Mañana y Tarde">Mañana y Tarde</option>
                     <option value="Variable">Variable</option>
                     <option value="No trabaja">No trabaja</option>
                 </select>
@@ -142,6 +145,7 @@
                 <select id="workSchedule-thursday" name="workSchedule-thursday">
                     <option value="Mañana">Mañana</option>
                     <option value="Tarde">Tarde</option>
+                    <option value="Mañana y Tarde">Mañana y Tarde</option>
                     <option value="Variable">Variable</option>
                     <option value="No trabaja">No trabaja</option>
                 </select>
@@ -151,6 +155,7 @@
                 <select id="workSchedule-friday" name="workSchedule-friday">
                     <option value="Mañana">Mañana</option>
                     <option value="Tarde">Tarde</option>
+                    <option value="Mañana y Tarde">Mañana y Tarde</option>
                     <option value="Variable">Variable</option>
                     <option value="No trabaja">No trabaja</option>
                 </select>
