--- a/frontend/recover-password.html
+++ b/frontend/recover-password.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/toast.css">
     <link rel="manifest" href="json/manifest.json">
     <link rel="stylesheet" href="css/spinner.css">
     <meta name="theme-color" content="#0056b3">
-    <script src="js/forms.js" defer></script>
+    <script type="module" src="js/forms.js" defer></script>
     <script src="js/spinner.js"></script>
 </head>
 <body>
