--- a/frontend/holidays.html
+++ b/frontend/holidays.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/spinner.css">
+    <link rel="stylesheet" href="css/toast.css">
     <link rel="stylesheet" href="css/admin.css">
     <script type="module" src="js/holidays.js"></script>
 <body>
