--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/toast.css">
     <link rel="stylesheet" href="css/spinner.css">
     <link rel="manifest" href="json/manifest.json">
     <meta name="theme-color" content="#0056b3">
@@ -20,13 +21,13 @@
     <script src="js/payments.js" defer></script>
     <script src="js/main.js" defer></script>
     <script src="js/facturacion.js" defer></script>
-    <script src="js/menu.js" defer></script>
+    <script type="module" src="js/menu.js" defer></script>
     <script src="js/nav.js" defer></script>
     <script type="module" src="js/weekly-schedule-individualized.js" defer></script>
     <script type="module" src="js/shiftScheduleIndividualized.js" defer></script>
-    <script src="js/vacationInformIndividualized.js" defer></script>
-    <script src="js/holidayInformIndividualized.js" defer></script>
-    <script src="js/otherLeaveInformIndividualized.js" defer></script>
+    <script type="module" src="js/vacationInformIndividualized.js" defer></script>
+    <script type="module" src="js/holidayInformIndividualized.js" defer></script>
+    <script type="module" src="js/otherLeaveInformIndividualized.js" defer></script>
     <script type="module" src="js/notifications.js"></script>
     <script type="module">
         import { initializePermissions, showIfHasRole } from './js/authUtils.js';
