--- a/frontend/login.html
+++ b/frontend/login.html
@@ -13,10 +13,11 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/toast.css">
     <link rel="stylesheet" href="css/spinner.css">
     <link rel="manifest" href="json/manifest.json">
     <meta name="theme-color" content="#0056b3">
-    <script defer src="js/forms.js"></script>
+    <script type="module" defer src="js/forms.js"></script>
     <script src="js/spinner.js"></script>
 </head>
 <body>
