--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/login.css"> <!-- Usar login.css para estilos compartidos -->
     <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/toast.css">
     <link rel="stylesheet" href="css/spinner.css">
     <script defer src="js/bundle.js"></script>
-    <script src="js/forms.js" defer></script>
+    <script type="module" src="js/forms.js" defer></script>
     <script src="js/spinner.js"defer></script>
 </head>
 <body>
