--- a/frontend/register.html
+++ b/frontend/register.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/toast.css">
     <link rel="stylesheet" href="css/spinner.css">
     <meta name="theme-color" content="#0056b3">
     <script src="js/spinner.js"></script>
