--- a/frontend/vacationSwap.html
+++ b/frontend/vacationSwap.html
@@ -12,10 +12,11 @@
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/spinner.css">
+    <link rel="stylesheet" href="css/toast.css">
     <link rel="stylesheet" href="css/admin.css">
     <script defer src="js/bundle.js"></script>
     <script defer src="js/spinner.js"></script>
-    <script src="js/forms.js" defer></script>
+    <script type="module" src="js/forms.js" defer></script>
     <script type="module" src="js/vacationSwap.js" defer></script>
 </head>
 
