correccion de pass visibility

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -39,7 +39,7 @@
                 <label for="password">Contraseña</label>
                 <div class="password-container">
                     <input type="password" id="password" name="password" required>
-                    <span class="toggle-password" onclick="togglePasswordVisibility('password')">👁️</span>
+                    <span class="toggle-password" data-target="password">👁️</span>
                 </div>
             </div>
             <div class="remember-me">
