--- a/frontend/register.html
+++ b/frontend/register.html
@@ -43,14 +43,14 @@
                 <label for="password">Contraseña</label>
                 <div class="password-container">
                     <input type="password" id="password" name="password" required>
-                    <span class="toggle-password" onclick="togglePasswordVisibility('password')">👁️</span>
+                    <span class="toggle-password" data-target="password">👁️</span>
                 </div>
             </div>
             <div class="input-group">
                 <label for="confirm-password">Confirmar Contraseña</label>
                 <div class="password-container">
                     <input type="password" id="confirm-password" name="confirm-password" required>
-                    <span class="toggle-password" onclick="togglePasswordVisibility('confirm-password')">👁️</span>
+                    <span class="toggle-password" data-target="confirm-password">👁️</span>
                 </div>
             </div>
             <button type="submit" class="register-button">Registrarse</button>
