agregado de toasts

--- a/frontend/coverageInform.html
+++ b/frontend/coverageInform.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/admin.css">
   <link rel="stylesheet" href="css/weekly-schedule.css">
   <link rel="stylesheet" href="css/spinner.css">
+  <link rel="stylesheet" href="css/toast.css">
   <link rel="stylesheet" href="css/vacationInform.css">
   <script type="module" src="js/coverageInform.js"></script>
   <script defer src="js/bundle.js"></script>
