--- a/frontend/login.html
+++ b/frontend/login.html
@@ -33,12 +33,12 @@
             <h2>Inicia Sesión</h2>
             <div class="input-group">
                 <label for="username">Nombre de Usuario</label>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" name="username" autocomplete="username" required>
             </div>
             <div class="input-group">
                 <label for="password">Contraseña</label>
                 <div class="password-container">
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" id="password" name="password" autocomplete="current-password" required>
                     <span class="toggle-password" data-target="password">👁️</span>
                 </div>
             </div>
