--- a/frontend/abm-institutions.html
+++ b/frontend/abm-institutions.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/spinner.css">
+    <link rel="stylesheet" href="css/toast.css">
     <link rel="stylesheet" href="css/admin.css">
     <script defer src="js/bundle.js"></script>
     <script type="module" defer src="js/abm-institutions.js"></script>
