--- a/frontend/default-assignments.html
+++ b/frontend/default-assignments.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/weekly-schedule.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/spinner.css">
+    <link rel="stylesheet" href="css/toast.css">
     <link rel="stylesheet" href="css/media.css">
     <script defer src="js/bundle.js"></script>
     <script src="js/spinner.js"></script>
