--- a/frontend/extra-assignments.html
+++ b/frontend/extra-assignments.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/weekly-schedule.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/spinner.css">
+    <link rel="stylesheet" href="css/toast.css">
     <link rel="stylesheet" href="css/tooltip.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/progressBar.css">
