--- a/frontend/holidayAssistant.html
+++ b/frontend/holidayAssistant.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/admin.css">
     <link rel="stylesheet" href="css/weekly-schedule.css">
     <link rel="stylesheet" href="css/spinner.css">
-    <script src="js/holidayAssistant.js"></script>
+    <link rel="stylesheet" href="css/toast.css">
+    <script type="module" src="js/holidayAssistant.js"></script>
 </head>
 <body>
     <header>
