--- a/frontend/recover-password.html
+++ b/frontend/recover-password.html
@@ -36,7 +36,7 @@
             </div>
             <div class="input-group">
                 <label for="email">Correo Electrónico</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" autocomplete="email" required>
             </div>
             <button type="submit" class="recover-button">Recuperar Contraseña</button>
             <div class="login-link-container">
