--- a/frontend/register.html
+++ b/frontend/register.html
@@ -33,23 +33,23 @@
             <h2>Registrate</h2>
             <div class="input-group">
                 <label for="username">Nombre de Usuario</label>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" name="username" autocomplete="username" required>
             </div>
             <div class="input-group">
                 <label for="email">Correo Electrónico</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" autocomplete="email" required>
             </div>
             <div class="input-group">
                 <label for="password">Contraseña</label>
                 <div class="password-container">
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" id="password" name="password" autocomplete="new-password" minlength="6" required>
                     <span class="toggle-password" data-target="password">👁️</span>
                 </div>
             </div>
             <div class="input-group">
                 <label for="confirm-password">Confirmar Contraseña</label>
                 <div class="password-container">
-                    <input type="password" id="confirm-password" name="confirm-password" required>
+                    <input type="password" id="confirm-password" name="confirm-password" autocomplete="new-password" minlength="6" required>
                     <span class="toggle-password" data-target="confirm-password">👁️</span>
                 </div>
             </div>
@@ -61,6 +61,6 @@
             </div>
         </form>
     </main>
-    <script src="js/forms.js" defer></script>
+    <script type="module" defer src="js/forms.js"></script>
 </body>
 </html>
