--- a/frontend/reset-password.html
+++ b/frontend/reset-password.html
@@ -31,11 +31,11 @@
             <h2>Restablecer Contraseña</h2>
             <div class="input-group">
                 <label for="new-password">Nueva Contraseña</label>
-                <input type="password" id="new-password" name="new-password" required>
+                <input type="password" id="new-password" name="new-password" autocomplete="new-password" minlength="6" required>
             </div>
             <div class="input-group">
                 <label for="confirm-password">Confirmar Nueva Contraseña</label>
-                <input type="password" id="confirm-password" name="confirm-password" required>
+                <input type="password" id="confirm-password" name="confirm-password" autocomplete="new-password" minlength="6" required>
             </div>
             <button type="submit" class="reset-button">Restablecer Contraseña</button>
         </form>
