cambios en mail

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/spinner.css">
     <meta name="theme-color" content="#0056b3">
     <script src="js/spinner.js"></script>
-</head>
+    <script type="module" src="js/forms.js" defer></script>
 </head>
 <body>
     <div class="spinner" id="spinner"></div>
