--- a/frontend/index.html
+++ b/frontend/index.html
@@ -109,11 +109,11 @@
                 <legend>Neuquén</legend>
                 <button onclick="toggleNomencladoresneuquen()">Nomencladores</button>
                 <ul id="nomencladores-list-nqn" class="hidden" style="display:none;">
-                    <li><a href="https://drive.google.com/file/d/1qS6kYSzh839uY0q_K_RFlKwYDSK0c56r/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> Complejidades</a></li>
-                    <li><a href="https://drive.google.com/file/d/1jSSkiXIWHD5sBDBkCYvH3JTGXuRjQj_O/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> ISSN</a></li>
-                    <li><a href="https://drive.google.com/file/d/1Xy9CJfhcL-JMroCbAKmp5MPwRVOncJSH/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> Galeno</a></li>
-                    <li><a href="https://drive.google.com/file/d/1UmgxOdnOn_AXt2gJs76dALfWSRcduDih/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> OSDE</a></li>
-                    <li><a href="https://drive.google.com/file/d/1XdTVLBVaW1jjOYoqRfB3tI8XUWL78uMA/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> OSPEPRI/NIVELES</a></li>
+                    <li><a href="https://drive.google.com/file/d/1qS6kYSzh839uY0q_K_RFlKwYDSK0c56r/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><img src="images/icons/pdf-icon.png" alt="PDF"> Complejidades</a></li>
+                    <li><a href="https://drive.google.com/file/d/1jSSkiXIWHD5sBDBkCYvH3JTGXuRjQj_O/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><img src="images/icons/pdf-icon.png" alt="PDF"> ISSN</a></li>
+                    <li><a href="https://drive.google.com/file/d/1Xy9CJfhcL-JMroCbAKmp5MPwRVOncJSH/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><img src="images/icons/pdf-icon.png" alt="PDF"> Galeno</a></li>
+                    <li><a href="https://drive.google.com/file/d/1UmgxOdnOn_AXt2gJs76dALfWSRcduDih/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><img src="images/icons/pdf-icon.png" alt="PDF"> OSDE</a></li>
+                    <li><a href="https://drive.google.com/file/d/1XdTVLBVaW1jjOYoqRfB3tI8XUWL78uMA/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><img src="images/icons/pdf-icon.png" alt="PDF"> OSPEPRI/NIVELES</a></li>
                 </ul>
                 <button onclick="openFile('https://drive.google.com/file/d/1CHoY7uylsThHS9jmab-kDymfBwcHS9Qw/view?usp=sharing')">Instructivo ISSN</button>
                 <button onclick="openFile('https://docs.google.com/document/d/1tup_lj98cJVTMsBzhkQG2tzGLM8yhKTWygaHY0T0dyY/edit?usp=sharing')">Instructivo PAMI</button>
@@ -124,13 +124,13 @@
                 <legend>Río Negro</legend>
                 <button onclick="toggleNomencladoresrionegro()">Nomencladores</button>
                 <ul id="nomencladores-list-rn" class="hidden" style="display:none;">
-                    <li><a href="https://drive.google.com/file/d/1vb7ZeUgggrDCXRvLdNdf8ewQjCqOSZwt/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> ARAAR 2015</a></li>
-                    <li><a href="https://drive.google.com/file/d/1lyBxPOq78zfdfgAYqfJLFOhcUQnlCKDe/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> ARAAR 2018</a></li>
-                    <li><a href="https://drive.google.com/file/d/1ucXPTH36aYWAosTWHWG7kQJhOeuoPabp/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> ARAAR 2022</a></li>
-                    <li><a href="https://drive.google.com/file/d/1tZwE2drmMs_k7IEQHtT0I5TajGOmCaO9/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> ISSN</a></li>
-                    <li><a href="https://drive.google.com/file/d/1u3pc0eoJxFGhSv6cmGuTEcdF3g5ek9XV/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> NIVELES</a></li>
-                    <li><a href="https://drive.google.com/file/d/1t_n0KrS91wWrbuemFCX2v-aw2rxHnDh7/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> OSDE</a></li>
-                    <li><a href="https://drive.google.com/file/d/1LBt0piXrQkohi2Isvt9Hsq76VKs7v2Pw/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> OSDIPP</a></li>
+                    <li><a href="https://drive.google.com/file/d/1vb7ZeUgggrDCXRvLdNdf8ewQjCqOSZwt/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><img src="images/icons/pdf-icon.png" alt="PDF"> ARAAR 2015</a></li>
+                    <li><a href="https://drive.google.com/file/d/1lyBxPOq78zfdfgAYqfJLFOhcUQnlCKDe/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><img src="images/icons/pdf-icon.png" alt="PDF"> ARAAR 2018</a></li>
+                    <li><a href="https://drive.google.com/file/d/1ucXPTH36aYWAosTWHWG7kQJhOeuoPabp/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><img src="images/icons/pdf-icon.png" alt="PDF"> ARAAR 2022</a></li>
+                    <li><a href="https://drive.google.com/file/d/1tZwE2drmMs_k7IEQHtT0I5TajGOmCaO9/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><img src="images/icons/pdf-icon.png" alt="PDF"> ISSN</a></li>
+                    <li><a href="https://drive.google.com/file/d/1u3pc0eoJxFGhSv6cmGuTEcdF3g5ek9XV/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><img src="images/icons/pdf-icon.png" alt="PDF"> NIVELES</a></li>
+                    <li><a href="https://drive.google.com/file/d/1t_n0KrS91wWrbuemFCX2v-aw2rxHnDh7/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><img src="images/icons/pdf-icon.png" alt="PDF"> OSDE</a></li>
+                    <li><a href="https://drive.google.com/file/d/1LBt0piXrQkohi2Isvt9Hsq76VKs7v2Pw/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><img src="images/icons/pdf-icon.png" alt="PDF"> OSDIPP</a></li>
                 </ul>
                 <button onclick="openFile('https://docs.google.com/document/d/1Qi-4nLkx5JaC6ENG58FqGUWTfMmmB86n/edit?usp=drive_link&ouid=116849778907664010256&rtpof=true&sd=true')">Nomenclado sugerido</button>
                 <button onclick="openFile('https://docs.google.com/spreadsheets/d/1lfG-mgvubXj-OIEdgatealLe4A6WvcX0/edit?usp=sharing&ouid=116849778907664010256&rtpof=true&sd=true')">URPA BLOQUEO MEDICACION 2025</button>
@@ -156,11 +156,11 @@
         <section id="varios" class="content-section" style="display:none;">
             <button onclick="toggleTutoriales()">Tutoriales</button>
             <ul id="tutoriales-list" class="hidden" style="display:none;">
-                <li><a href="https://drive.google.com/file/d/1RnvQy77VVhoQojQVvyT9Rff27vpwcQ-b/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> Subir archivos a datatech</a></li>
-                <li><a href="https://drive.google.com/file/d/1vJPaQgBMRb5Nk0XUaxQJhmnOgIrrh0Rq/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> Pedir hemoderivados</a></li>
-                <li><a href="https://drive.google.com/file/d/1M-TNicf5qQ0nTLHohgykRDlPNIZAlBFt/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> Calibrar bombas Mindray</a></li>
-                <li><a href="https://drive.google.com/file/d/1aKbTZqYVo3EJNAyURRn9T9g_By7InhR_/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> Pasos a cumplimentar en caso de incidente</a></li>
-                <li><a href="https://docs.google.com/document/d/1re-LWRocnYjrEJXKYY6eslRvsTkTzvua?rtpof=true&usp=drive_fs" target="_blank"><img src="images/icons/word-icon.png" alt="WORD"> Reporte de Farmacovigilancia</a></li>
+                <li><a href="https://drive.google.com/file/d/1RnvQy77VVhoQojQVvyT9Rff27vpwcQ-b/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><img src="images/icons/pdf-icon.png" alt="PDF"> Subir archivos a datatech</a></li>
+                <li><a href="https://drive.google.com/file/d/1vJPaQgBMRb5Nk0XUaxQJhmnOgIrrh0Rq/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><img src="images/icons/pdf-icon.png" alt="PDF"> Pedir hemoderivados</a></li>
+                <li><a href="https://drive.google.com/file/d/1M-TNicf5qQ0nTLHohgykRDlPNIZAlBFt/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><img src="images/icons/pdf-icon.png" alt="PDF"> Calibrar bombas Mindray</a></li>
+                <li><a href="https://drive.google.com/file/d/1aKbTZqYVo3EJNAyURRn9T9g_By7InhR_/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><img src="images/icons/pdf-icon.png" alt="PDF"> Pasos a cumplimentar en caso de incidente</a></li>
+                <li><a href="https://docs.google.com/document/d/1re-LWRocnYjrEJXKYY6eslRvsTkTzvua?rtpof=true&usp=drive_fs" target="_blank" rel="noopener noreferrer"><img src="images/icons/word-icon.png" alt="WORD"> Reporte de Farmacovigilancia</a></li>
             </ul>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1rHyyYz1Ceotfd47ZuikEYOEjeMizu8Oq/edit?usp=sharing&ouid=116849778907664010256&rtpof=true&sd=true')">Equipamiento propio</button>
             <button onclick="openFile('https://drive.google.com/file/d/1U38nU0W1rJhKxsI2cYug_5eTxkgmovIf/view?usp=sharing')">Datos S.A.</button>
