--- a/frontend/login.html
+++ b/frontend/login.html
@@ -5,6 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sistema de gestión de anestesiólogos del Valle">
+    <meta name="robots" content="noindex, nofollow">
     <title>Login - Anestesiólogos del Valle</title>
     <link rel="icon" type="image/png" href="images/logo/logo64x64.png">
     <link rel="stylesheet" href="css/base.css">
