--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,11 +72,11 @@
             <h3>Tus quirófanos asignados para esta semana son:</h3>
             <div id="user-assignments"></div>
             <a href="print-view.html"><button>Informe de plantas</button></a>
-            <a href="coverageInform.html"><button>Informe de coberturas</button></a>
+            <!-- <a href="coverageInform.html"><button>Informe de coberturas</button></a> -->
             <a href="weekly-schedule.html"><button>Programación de plantas</button></a>
             <!-- <a href="extra-assignments.html" class="admin-only"><button>Asignaciones Extras</button></a> -->
             <a href="workSchemes.html"><button>Distribución de colores</button></a>
-            <a href="solicitudCobertura.html"><button>Solicitud de coberturas</button></a>
+            <!-- <a href="solicitudCobertura.html"><button>Solicitud de coberturas</button></a> -->
             <!-- <button onclick="openFile('https://docs.google.com/spreadsheets/d/1IIAo4YHyBavQmA7iN3xVwhW9NncDwYU-3PpnL81d4TE/edit?usp=sharing')">Vacaciones y Guardias 2024</button>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1CBU7nXGDil2BPH5Ow2KOA7YgT9-LyGmtJSqBaOOmwng/edit?usp=sharing')">Vacaciones y Guardias 2025</button> -->
         </section>
@@ -100,8 +100,8 @@
             <div id="other-leaves-inform"></div>
             <a href="vacationInform.html"><button>Informe de vacaciones</button></a>
             <a href="vacationSwap.html"><button>Intercambio de vacaciones</button></a>
-            <button onclick="openFile('https://docs.google.com/spreadsheets/d/1IIAo4YHyBavQmA7iN3xVwhW9NncDwYU-3PpnL81d4TE/edit?usp=sharing')">Vacaciones y Guardias 2024</button>
-            <button onclick="openFile('https://docs.google.com/spreadsheets/d/1zW3U43q5KtYLUc8HOO_WDDsHxYs3z_bz/edit?usp=sharing&ouid=116849778907664010256&rtpof=true&sd=true')">Resultado sorteo vacaciones 2025/2026</button>
+            <!-- <button onclick="openFile('https://docs.google.com/spreadsheets/d/1IIAo4YHyBavQmA7iN3xVwhW9NncDwYU-3PpnL81d4TE/edit?usp=sharing')">Vacaciones y Guardias 2024</button>
+            <button onclick="openFile('https://docs.google.com/spreadsheets/d/1zW3U43q5KtYLUc8HOO_WDDsHxYs3z_bz/edit?usp=sharing&ouid=116849778907664010256&rtpof=true&sd=true')">Resultado sorteo vacaciones 2025/2026</button> -->
         </section>
         <section id="facturacion" class="content-section" style="display:none;">
             <!-- <h2>Facturación y Nomenclado</h2> -->
@@ -143,7 +143,7 @@
             <ul id="upcoming-payments">
                 <!-- Las fechas serán insertadas dinámicamente -->
             </ul>
-            <button onclick="openFile('https://docs.google.com/spreadsheets/d/1ze-cw18JtRd6q916kSgckYEMWluteQXwHidFzT0KTF0/edit?usp=sharing')">Resumen de Liquidaciones</button>
+            <button onclick="openFile('https://docs.google.com/spreadsheets/d/1U-eSYDAJZi848CcfEyhyE0TwJkEooRNccjTnOpdb3RY/edit?usp=sharing')">Resumen de Liquidaciones</button>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1ondWWdxWX3So_pRfAgMhOkel8mMEgsJO4okDtE5TZSY/edit?usp=drive_link')">Resumen de Ingresos</button>
         </section>
         <section id="reuniones" class="content-section" style="display:none;">
