--- a/frontend/login.html
+++ b/frontend/login.html
@@ -44,10 +44,10 @@
                     <span class="toggle-password" data-target="password">👁️</span>
                 </div>
             </div>
-            <div class="remember-me">
-                <label for="remember-me">
-                    <input type="checkbox" id="remember-me" name="remember-me" checked>
-                    Recuérdame
+            <div class="keep-session">
+                <label for="keep-session">
+                    <input type="checkbox" id="keep-session" name="keep-session">
+                    Mantener sesión iniciada
                 </label>
             </div>
             <button type="submit" class="login-button">Iniciar Sesión</button>
