--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,18 +27,18 @@
                 }
             }
 
-            const token = localStorage.getItem('token') || sessionStorage.getItem('token');
+            const token = localStorage.getItem('token');
             
             if (!token) {
                 // No hay token - sin aviso, solo redirigir
                 localStorage.removeItem('token');
-                sessionStorage.removeItem('token');
+                localStorage.removeItem('keepSession');
                 sessionStorage.removeItem('sessionExpiry');
                 window.location.replace('login.html');
             } else if (isTokenExpired(token)) {
                 // Token expirado - mostrar aviso
                 localStorage.removeItem('token');
-                sessionStorage.removeItem('token');
+                localStorage.removeItem('keepSession');
                 sessionStorage.removeItem('sessionExpiry');
                 
                 // Guardar mensaje para mostrar en login
